<resources>
    <string name="app_name">Infiniti Lotto</string>
    <string name="app_name_sabanzuri">Sabanzuri Lotto</string>
    <string name="prompt_email">Email</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_break">Change\nPassword</string>
    <string name="send_otp">Send OTP</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="register">Register</string>
    <string name="registered_mobile_number">registered mobile number</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="password">Password</string>
    <string name="username_eight_characters">Username must have at least 8 characters</string>
    <string name="password_eight_characters">Password must have at least 8 characters</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="passwords_do_not_match">Passwords Don\'t Match</string>
    <string name="old_and_new_password_cannot_be_same">Old password and new password cannot be same</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_valid_mobile_number_or_username">Enter Valid Mobile Number or Username</string>
    <string name="password_encrypt_error">Error In Encrypting Password</string>
    <string name="something_went_wrong">Something went wrong, try again later!</string>
    <string name="server_not_responding">Server is not responding, try again later!</string>
    <string name="some_technical_issue">Some technical issue, try again after some time.</string>
    <string name="some_internal_error">Some technical error, try later!</string>
    <string name="image">image</string>
    <string name="service_error">Service Error</string>
    <string name="login_error">Login Error</string>
    <string name="version_error">Version Error</string>
    <string name="my_transaction_error">My Transaction Error</string>
    <string name="my_tickets_error">My Tickets Error</string>
    <string name="inbox_error">Inbox Error</string>
    <string name="registration_error">Registration Error</string>
    <string name="forgot_password_error">Forgot Password Error</string>
    <string name="change_password_error">Change Password Error</string>
    <string name="fund_transfer_error">Fund Transfer Error</string>
    <string name="deposit_error">Deposit Error</string>
    <string name="withdrawal_error">Withdrawal Error</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="did_not_receive_otp">Didn\'t receive otp?</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="resend_otp_">Resend OTP</string>
    <string name="old_password">Old Password</string>
    <string name="password_must_be_of_min_eight_digits">Password must be of minimum 8 characters.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="one_time_password">One Time Password</string>
    <string name="first_name">First Name</string>
    <string name="first_name_optional">First Name (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_optional">Last Name (Optional)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_success_sent_to">OTP successfully sent to</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="deposit">Deposit</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="my_transactions">My Transactions</string>
    <string name="my_transactions_break">My\nTransactions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="wager">Wager</string>
    <string name="all">All</string>
    <string name="winning">Winning</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="new_password">New Password</string>
    <string name="no_transactions_found">No transactions found.</string>
    <string name="no_tickets_found">No tickets found.</string>
    <string name="no_mails_found">Your have no messages.</string>
    <string name="instant_games">INSTANT GAMES</string>
    <string name="game_draw_games">DRAW\nGAMES</string>
    <string name="game_sports_lottery">SPORTS\nLOTTERY</string>
    <string name="game_bet_games">BET\nGAMES</string>
    <string name="game_virtual_games">RACING</string>
    <string name="game_sports_betting">SPORTS\nBETTING</string>
    <string name="game_instant_games">INSTANT\nGAMES</string>
    <string name="game_draw_games_small">Draw Games</string>
    <string name="game_sports_lottery_small">Sports Lottery</string>
    <string name="game_bet_games_small">Bet Games</string>
    <string name="game_virtual_games_small">Racing</string>
    <string name="game_sports_betting_small">Sports Betting</string>
    <string name="game_instant_games_small">Instant Games</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="refer_a_friend_break">Refer a\nFriend</string>
    <string name="home">Home</string>
    <string name="results_caps">RESULTS</string>
    <string name="promotions_caps">PROMOTIONS</string>
    <string name="how_to_play_caps">HOW TO PLAY</string>
    <string name="support_caps">SUPPORT</string>
    <string name="balance">Balance</string>
    <string name="username_must_be_combination_of_number_alphabets">Username must be combination of alphabet and digits.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="balance_refreshed">Your balance has been refreshed</string>
    <string name="scan_qr_or_enter_id">Scan QR or Enter ID</string>
    <string name="machine_id">Machine ID</string>
    <string name="proceed">Proceed</string>
    <string name="allow_permission">You need to allow access permissions!</string>
    <string name="machine_id_required">Machine ID Required</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_valid_amount">Enter Valid Amount</string>
    <string name="pay_securely">PAY SECURELY</string>
    <string name="amount_currency">Amount ($)</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>
    <string name="new_update_available">New update available.</string>
    <string name="invalid_machine_id">Invalid Machine Id</string>
    <string name="total_balance">Total Balance</string>
    <string name="version">Version</string>
    <string name="pick_option">Pick option</string>
    <string name="image_uploaded_successfully">Image Uploaded Successfully</string>
    <string name="check_internet_connection">Please check your internet connection and try again.</string>
    <string name="session_expired">Session Expired</string>
    <string name="sabanzuri_lotto_copyright_2020">Sabanzuri Lotto © Copyright 2021</string>
    <string name="sabanzuri_lotto_six_by_forty_two_small">6/42 Sabanzuri Lotto</string>
    <string name="lucky_twelve_small">12/24 Lucky Twelve</string>
    <string name="treasure_hunt">TREASURE HUNT</string>
    <string name="treasure_hunt_small">Treasure Hunt</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="tic_tac_toe_small">Tic Tac Toe</string>
    <string name="money_bee">MONEY BEE</string>
    <string name="money_bee_small">Money Bee</string>
    <string name="big_five">BIG 5</string>
    <string name="big_five_small">Big 5</string>
    <string name="fun_time">FUN TIME</string>
    <string name="fun_time_small">Fun Time</string>
    <string name="theme">THEME</string>
    <string name="inbox">Inbox</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_tickets">My Tickets</string>
    <string name="quick_links">QUICK LINKS</string>
    <string name="draw_games_results">Draw Games Results</string>
    <string name="my_draw_games_tickets">My Draw Games Tickets</string>
    <string name="more_links">MORE LINKS</string>
    <string name="faq">FAQ</string>
    <string name="responsible_gaming">Responsible Gaming</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="switch_light_theme">Switch To Light Theme</string>
    <string name="switch_dark_theme">Switch To Dark Theme</string>
    <string name="hi_guest">Hi, Guest!</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="no_data_available">No Data Available</string>
    <string name="add_new_account">ADD NEW ACCOUNT</string>
    <string name="deposit_caps">DEPOSIT</string>
    <string name="withdraw_caps">WITHDRAW</string>
    <string name="select_a_c">SELECT A/C</string>
    <string name="amount_caps">AMOUNT</string>
    <string name="currency_caps">CURRENCY</string>
    <string name="cost">Cost</string>
    <string name="select_account_number">Select Account Number</string>
    <string name="select_currency">Select Currency</string>
    <string name="pending_deposit_transactions">Pending Deposit Transactions</string>
    <string name="pending_withdrawal_transactions">Pending Withdrawal Transactions</string>
    <string name="txn_id">Txn Id:</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="enter_account_number">Please Enter Account Number</string>
    <string name="add">Add</string>
    <string name="acc_added_success">Account Added Successfully.</string>
    <string name="otp_sent">OTP sent successfully.</string>
    <string name="plz_add_select_acc_num_first">Please Add/Select Account Number First.</string>
    <string name="withdrawn_successfully">Withdrawn Successfully</string>
    <string name="title_activity_transition">title_activity_transition</string>
    <string name="i_am_at_least_18_years_old_and_have_read_accepted_the"><![CDATA[I am at least 18 years old and have read & accepted the]]></string>
    <string name="username_mobile_number">Username/Mobile Number</string>
    <string name="search">Search</string>
    <string name="search_your_message_here">Search your message here</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="nothing_to_delete">Nothing to delete.</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_six_digits_otp">Please enter 6 digits OTP received on</string>
    <string name="verification_code_sent_to">Verification code has been sent to</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>
    <string name="update_profile">Update Profile</string>
    <string name="message">Message</string>
</resources>