<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/gameListFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@id/fundTransferFragment"
        android:icon="@drawable/scan_qr_icon"
        android:title="@string/fund_transfer" />
    <item
        android:id="@id/myProfileFragment"
        android:icon="@drawable/my_profile_icon"
        android:title="@string/profile" />

    <!--<item
        android:id="@+id/menuHome"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/menuFundTransfer"
        android:icon="@drawable/scan_qr_icon"
        android:title="@string/fund_transfer" />
    <item
        android:id="@+id/menuMyProfile"
        android:icon="@drawable/my_profile_icon"
        android:title="@string/profile" />-->

</menu>