<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.skilrock.infinitylotoapp.dialogs.ErrorDialog">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icon_error"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/service_error"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorError"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="?attr/colorDialogMessage"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="?attr/colorDialogButtonLight"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="20dp" />

</LinearLayout>
