<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context="com.skilrock.infinitylotoapp.dialogs.ForgotPasswordOtpDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password"
        android:textColor="?attr/colorLoginDialogTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/colorLoginDialogTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/colorDialogSoftMessage"
        android:textSize="10sp"
        android:textStyle="italic"
        tools:ignore="SmallSp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOtp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="?attr/colorEditTextHint"
        app:boxStrokeColor="@color/edit_text_box_border"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="?attr/colorEditTextHintFloat"
        app:errorTextAppearance="@style/edit_text_error_hint"
        app:hintTextAppearance="@style/edit_text_normal_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/one_time_password"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableStart="@drawable/icon_otp"
            android:drawablePadding="10dp"
            android:imeOptions="actionNext"
            android:textColor="?attr/colorEditTextFocusOutline"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="?attr/colorEditTextHint"
        app:boxStrokeColor="@color/edit_text_box_border"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="?attr/colorEditTextHintFloat"
        app:passwordToggleTint="?attr/colorEditTextWithoutFocusOutline"
        app:errorTextAppearance="@style/edit_text_error_hint"
        app:hintTextAppearance="@style/edit_text_normal_hint"
        app:passwordToggleDrawable="@drawable/custom_password_eye"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:maxLength="16"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableStart="@drawable/icon_lock"
            android:drawablePadding="10dp"
            android:imeOptions="actionNext"
            android:textColor="?attr/colorEditTextFocusOutline"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="?attr/colorEditTextHint"
        app:boxStrokeColor="@color/edit_text_box_border"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="?attr/colorEditTextHintFloat"
        app:passwordToggleTint="?attr/colorEditTextWithoutFocusOutline"
        app:errorTextAppearance="@style/edit_text_error_hint"
        app:hintTextAppearance="@style/edit_text_normal_hint"
        app:passwordToggleDrawable="@drawable/custom_password_eye"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableStart="@drawable/icon_lock"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:maxLength="16"
            android:textColor="?attr/colorEditTextFocusOutline"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_not_receive_otp"
            android:textColor="#919191"
            android:textSize="12sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/resend_otp"
            android:textColor="#ffb700"
            android:textSize="12sp"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="?attr/colorDialogButtonLight"
            android:textSize="14sp"
            android:theme="@style/Theme.MaterialComponents"
            app:strokeColor="?attr/colorDialogButtonLight"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorDialogButtonLight"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:theme="@style/Theme.MaterialComponents" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
